--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, sans-serif;
-}
+@import "@fontsource-variable/inter";
+
+html, body, #root { height: 100%; }
+body { background:#f7f9fc; }
